--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -12,6 +12,10 @@
   background-color: var(--background-color)
 }
 
+.cards > ul > li a {
+  cursor: pointer;
+}
+
 .cards .cards-card-body {
   margin: 16px;
 }
