--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -19,6 +19,10 @@
   display: block;
 }
 
+.columns > div:not(:last-child) {
+  margin-bottom: 10px;
+}
+
 @media (width >= 900px) {
   .columns > div {
     align-items: center;
